# wideint

./: CMakeLists.txt  README.md  wideint.hpp  wuint.hpp
.github/workflows/: wideint-ci-workflow.yaml
test/: test_main.cpp  test_wint.cpp  test_wuint.cpp
